# SymbolicRegression4HA

./: .gitignore  LICENSE  README.md  converter_segmentation.db  grouping_analysis.db  pyproject.toml  qlattice-summary.html  qlattice_model.json  segmentation_analysis.db
configs/: circuit1mode_identification.yaml  circuit2_identification.yaml  circuit3mode_identification.yaml  circuit_identification.yaml  converter_identification.yaml  dso_config.json  logistic_test_datasize.yaml  logistic_test_iterations.yaml  population_diff_calculated_identification.yaml  population_differential_identification.yaml  population_solution_identification.yaml  two_tank_deriv_simulated.yaml  two_tank_dso.yaml  two_tank_gplearn.yaml  two_tank_identification.yaml  two_tank_identification_test.yaml  two_tank_nsub_identification.yaml  two_tank_onetank.yaml  two_tank_onetank_with_substitution.yaml  two_tank_pysr.yaml  two_tank_qlattice.yaml  two_tank_simulated_with_substitutions.yaml  two_tank_standard.yaml  two_tank_sub_identification.yaml  two_tank_subtract_dominant.yaml  two_tank_test_datasize.yaml  two_tank_test_datasize2.yaml  two_tank_test_datasize3.yaml  two_tank_with_substitutions.yaml
examples/: data.csv  data_nonoise.csv
plot/: plot_from_database.py  plot_results.py
results/: segmentation_analysis.db  segmentation_analysis_test.db
sr-analysis/: test_datasize.py  test_iterations.py
src/: converter_segmentation_analysis.py  criteria.py  custom_fitness.py  evaluation.py  functionals.py  grouping_criteria.py  main.py  main_old.py  plot_signals.py  symbolic_learner.py  (+1 more)
(+125 files in other folders)
